<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btnMenuLogout"
        android:title="Logout" />
    <item
        android:id="@+id/btnMenuTutorHomeView"
        android:title="Your offers" />
</menu>